Make Keywhiz work with JDK11
This updates Keywhiz to work with JDK11+

That involved some dependency updates, and removing a few.

Unfortunately we had to disable a test that used Powermock, at least until it supports JDK9+ or we rewrite the test.